06_PARKCHANGJUN/04_k8s/section02/ingress-boot.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-boot
  annotations:
    # 매칭된 경로에서 /boot 부분을 제거하고 나머지 부분만 백엔드 서비스로 전달한다.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # 기본적으로 NGINX Ingress 컨트롤러는 모든 HTTP 트래픽을 HTTPS로 리다이렉트한다.
    # 이 설정을 "false"로 지정하면 HTTP 요청을 HTTPS로 자동 리다이렉트 하지 않는다.
    # 개발 환경이나 SSL/TLS가 필요 없는 상황에서 유용하다.
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /boot(/|$)(.*)
            # 여기서도 ImplementationSpecific을                       사용하여 /boot로 시작하는 모든 경로를 매칭한다.
            # (/|$)는 /boot 다음에 /가 오거나 문자열이 끝나는 경우를 모두 포함한다.
            # (.*)는 그 뒤의 모든 문자열을 캡처한다.
            # 예: /boot, /boot/, /boot/plus, /boot/users 등
            pathType: ImplementationSpecific
            backend:
              service:
                name: boot002ser
                port:
                  number: 8001
